--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -33,6 +33,7 @@
 
 <a routerLink="/viewchildparent">viewchildparent</a>
 <app-googlemap></app-googlemap>
+<app-users-list></app-users-list>
 
 
     
