--- a/src/app/parenttochild-inp/parent/parent.component.html
+++ b/src/app/parenttochild-inp/parent/parent.component.html
@@ -1,3 +1,11 @@
 <p>
   parent works!
 </p>
+
+<div>
+  <div>Testing parent message2
+    <div>
+      <app-child [childMessage]="parentMessage123"></app-child>
+    </div>
+  </div>
+</div>
