--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -35,6 +35,9 @@
     <div>
         <a routerLink="/ngcontent">ng-content</a>
       </div>
+      <div>
+          <a routerLink="/userlist">userlist & hooks</a>
+        </div>
   </div>
   <div style="padding-bottom:20px">
     <p>In this example, the sticky element sticks to the top of the page (top: 0), when you reach its scroll position.</p>
