--- a/src/app/ngtemplate/ngtemplate.component.html
+++ b/src/app/ngtemplate/ngtemplate.component.html
@@ -1,5 +1,5 @@
 <p>
-  ngtemplate works!
+  ngtemplate works! <a href="https://codecraft.tv/courses/angular/components/content-projection/" target="_blank">refered</a>
 </p>     
 <ng-template #estimateTemplate let-lessonsCounter="estimate">
     <div> Approximately {{lessonsCounter}} lessons ...</div>
