--- a/src/app/users-list/users-list.component.html
+++ b/src/app/users-list/users-list.component.html
@@ -8,7 +8,17 @@
    <button *ngFor="let user of users" [routerLink]="['user', user.id]">{{user.login}}</button> --> 
 </ul>
 <div><button (click)="goBack()">Go Back</button></div>
-<div *ngFor="let user of users" [routerLink]="['user', user.id]">
-   <button >{{user.login}}</button>
+<button type="button"
+        class="btn btn-success"
+        (click)="addUser()">Add User
+</button>
+<button type="button"
+        class="btn btn-danger"
+        (click)="deleteUsers()">Clear Users
+</button>
+<div *ngFor="let user of users" >
+   <button [routerLink]="['/user', user.id]">{{user.login}}</button>
 </div>
+<app-user></app-user>
+
 
